// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SignalrFacade used in NgModule should handle received messages: post-cleared 1`] = `
{
  "signalr": {
    "isConnected": false,
    "lastReceivedMessage": undefined,
    "notificationPermission": undefined,
    "receivedMessages": [],
  },
}
`;

exports[`SignalrFacade used in NgModule should handle received messages: pre-clear 1`] = `
{
  "signalr": {
    "isConnected": false,
    "lastReceivedMessage": {
      "data": "😎",
      "methodName": "helloWorld",
    },
    "notificationPermission": undefined,
    "receivedMessages": [
      {
        "data": "😎",
        "methodName": "helloWorld",
      },
    ],
  },
}
`;

exports[`SignalrFacade used in NgModule should handle reconnect 1`] = `
{
  "signalr": {
    "isConnected": true,
    "lastReceivedMessage": undefined,
    "notificationPermission": undefined,
    "receivedMessages": [],
  },
}
`;
